force-app/main/default/objects/MileySetting__c/MileySetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations used by Miley mobile app</description>
    <label>Miley Setting</label>
</CustomObject>