force-app/main/default/objects/MileySetting__c/fields/AutoOpenLocationSubmissionRadius__c.field-meta.xml
<CustomField>
    <fullName>AutoOpenLocationSubmissionRadius__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Auto Open Location Submission Radius</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>