force-app/main/default/objects/MileySetting__c/fields/GeofenceLocationSubmissionRadius__c.field-meta.xml
<CustomField>
    <fullName>GeofenceLocationSubmissionRadius__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Geofence Location Submission Radius</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>