force-app/main/default/objects/MileySetting__c/fields/IsLocationSubmissionAutoOpenEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsLocationSubmissionAutoOpenEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Open Location Submission?</label>
    <type>Checkbox</type>
</CustomField>