force-app/main/default/objects/MileySetting__c/fields/IsLocationSubmissionGeofenceEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsLocationSubmissionGeofenceEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Geofence Location Submission?</label>
    <type>Checkbox</type>
</CustomField>