force-app/main/default/objects/MileySetting__c/fields/LocationAccuracyPriority__c.field-meta.xml
<CustomField>
    <fullName>LocationAccuracyPriority__c</fullName>
    <description>105: PRIORITY_PASSIVE - No extra power will be used to derive locations.
104: PRIORITY_LOW_POWER - Low power usage at the possible expense of location accuracy.
102: PRIORITY_BALANCED_POWER_ACCURACY - Balanced between location accuracy and power usage.
100: PRIORITY_HIGH_ACCURACY - Highly accurate locations at the possible expense of additional power usage.</description>
    <label>Location Accuracy Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>