force-app/main/default/objects/MileySetting__c/fields/MaxLocationUpdateDelayMillis__c.field-meta.xml
<CustomField>
    <fullName>MaxLocationUpdateDelayMillis__c</fullName>
    <description>The longest a location update may be delayed.</description>
    <label>Maximum Location Update Delay (Millis)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>