force-app/main/default/objects/MileySetting__c/fields/MinLocationUpdateDistanceMeters__c.field-meta.xml
<CustomField>
    <fullName>MinLocationUpdateDistanceMeters__c</fullName>
    <description>Minimum distance required between consecutive location updates.</description>
    <label>Minimum Location Update Distance (Mtrs)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>